--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,13 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
+	testCompile 'com.jayway.awaitility:awaitility-groovy:1.7.0'
 
 	// optional dependencies for using Spock
 	testCompile "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
 	testRuntime "cglib:cglib-nodep:3.1"          // allows mocking of classes (in addition to interfaces)
 	testRuntime "org.objenesis:objenesis:2.1"    // allows mocking of classes without default constructor (together with CGLIB)
+
 }
 
 
