--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,17 @@ apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 
 jar {
+	manifest {
+		attributes 'Implementation-Title': 'Gradle Jar File Example',
+				'Implementation-Version': 1,
+				'Main-Class': 'com.base.Bsdemo1Application'
+	}
+	from {
+		configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+	}
 	baseName = 'bsdemo1'
 	version = '0.0.1-SNAPSHOT'
+
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -37,7 +46,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile "org.codehaus.groovy:groovy-all:2.4.1"
 	compile "com.getbase:basecrm-java:1.3.2"
-
 	runtime('com.h2database:h2')
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
